fixed mobile layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -175,6 +175,14 @@ header span:hover{
 
 }
 
+@media (max-width: 768px) {
+  .pond-fr0gg-container {
+    width: 80%;     
+    left: 10%;      
+    top: 30%;       
+}
+}
+
 @keyframes levitate {
   0% {
     transform: translateY(0);
@@ -261,24 +269,52 @@ header span:hover{
 }
 
 .info-box-header{
-  position: sticky;
+  position: fixed;
+  width: 100%;
   height: 36px;
   background: white;
   border-bottom: 1px solid black;
-  cursor: move;
   display: flex;
   justify-content: space-between;
   font-size: 14px;
-  padding: 0.125rem 0.5rem;
+  padding: 0.5rem 1rem;
+  z-index: 100;
+}
+
+.info-box-header-left {
+  font-size: 14px;
 }
 
 .info-box.open {
   display:block;
 }
 
+.info-box-content{
+  position: relative;
+  margin-top:40px;
+  padding: 0 8rem 2rem 2rem;
+}
 .info-box p{
   font-size: 14px;
   padding: 0.5rem 0.5rem;
+}
+
+.code {
+  font-family: 'Courier New', Courier, monospace;
+  background: lightgray;
+  margin: 1rem 0.5rem;
+  border-radius:2px;
+  color: black;
+  white-space: break-spaces;
+  font-size: 14px;
+}
+.red{
+  color:crimson;
+  font-size: 14px;
+}
+.purple{
+  color: rebeccapurple;
+  font-size: 14px;
 }
 
 /* The scrollbar itself */
@@ -299,7 +335,13 @@ header span:hover{
 }
 
 /* MINIPLAYER */
-
+.mini-player-container {
+  display: flex;
+  justify-content: flex-end; 
+  align-items: center;
+  gap: 0;
+  padding: 0;
+}
 .mini-player {
   position: relative;
   display: grid;
@@ -307,7 +349,8 @@ header span:hover{
   gap: 0.5rem;
   align-items: center;
   color: black;
-  width: 100%;
+  justify-content: flex-end;
+  margin-left: auto;
 }
 
 .mp-btn {
@@ -318,7 +361,7 @@ header span:hover{
 }
 .mp-btn:disabled { opacity: .4; cursor: default; }
 
-.mp-play { font-size: 16px; }
+.mp-play { font-size: 16px; text-align: left; width: 16px; }
 
 .mp-meta {
   display: flex;
@@ -352,6 +395,12 @@ header span:hover{
   cursor: pointer;
 }
 
+@media (max-width: 768px) {
+  .mp-bar {
+    min-width: 100px;
+}
+}
+
 .mp-fill {
   position: absolute;
   left: 0;
@@ -370,15 +419,28 @@ header span:hover{
 }
 .mp-vol-ico { font-size: 14px; }
 
-/* Small screens: tighten */
 @media (max-width: 640px) {
   .mini-player {
-    grid-template-columns: auto auto auto 1fr auto;
+    grid-template-columns: 1fr 8fr 1fr;
     gap: 8px;
-    padding: 8px 10px;
+    padding: 8px 0;
   }
   .mp-time { display: none; }
   .mp-volume { display: none; }
+  .footer-date {display:  none;}
+  .mini-player-container {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 0;
+    padding: 0;
+    width: 100%;
+}
+.info-box-content{
+  position: relative;
+  margin-top:40px;
+  padding: 0 1rem 1rem;
+}
 }
 
 /* END MINIPLAYER */
